WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25399
WebKit Crashes on Lexis-Nexis
https://bugs.webkit.org/show_bug.cgi?id=25399
Summary
WebKit Crashes on Lexis-Nexis
Hayden
Reported
2009-04-25 16:36:03 PDT
WebKit Crashes on Lexis-Nexis
Attachments
Crash Report from Lexis Nexis (RTF)
(33.25 KB, application/octet-stream)
2009-04-25 16:37 PDT
,
Hayden
no flags
Details
2nd Crash Report
(36.46 KB, application/octet-stream)
2009-04-25 16:44 PDT
,
Hayden
no flags
Details
proposed fix
(8.06 KB, patch)
2009-04-27 02:17 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hayden
Comment 1
2009-04-25 16:37:21 PDT
Created
attachment 29791
[details]
Crash Report from Lexis Nexis (RTF)
Hayden
Comment 2
2009-04-25 16:44:56 PDT
Created
attachment 29792
[details]
2nd Crash Report
Mark Rowe (bdash)
Comment 3
2009-04-25 20:37:42 PDT
Can you provide more specific instructions on how to reproduce this crash? Is simply loading the URL sufficient, or do specific links need to be clicked?
Mark Rowe (bdash)
Comment 4
2009-04-25 20:37:58 PDT
<
rdar://problem/6828178
>
Alexey Proskuryakov
Comment 5
2009-04-26 12:54:10 PDT
<
rdar://problem/6633943
> One needs an account to reproduce this.
Alexey Proskuryakov
Comment 6
2009-04-27 02:17:23 PDT
Created
attachment 29814
[details]
proposed fix Alas, I could not make a regression test, even after trying hard.
Darin Adler
Comment 7
2009-04-27 07:51:37 PDT
Comment on
attachment 29814
[details]
proposed fix r=me
Darin Adler
Comment 8
2009-04-27 07:52:57 PDT
Comment on
attachment 29814
[details]
proposed fix
> +#ifndef NDEBUG > + DocumentResourceMap::iterator it = m_documentResources.find(resource->url()); > + if (it != m_documentResources.end()) > + ASSERT(it->second.get() == resource); > +#endif
You could write this: ASSERT(!m_documentResources.contains(resource->url()) || m_documentResources.get(resource->url()) == resource); I think it's a little easier to understand.
Alexey Proskuryakov
Comment 9
2009-04-27 09:09:32 PDT
> I think it's a little easier to understand.
That's how I wrote it originally, but it was difficult to see why the assertion failed when stopped on it in the debugger.
Darin Adler
Comment 10
2009-04-27 09:14:07 PDT
(In reply to
comment #9
)
> That's how I wrote it originally, but it was difficult to see why the assertion > failed when stopped on it in the debugger.
OK.
Alexey Proskuryakov
Comment 11
2009-04-27 09:59:02 PDT
Committed <
http://trac.webkit.org/changeset/42896
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug